OK-316 Päivitetty JDK versioon 17