@@ -268,6 +268,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<!-- Käytössä on vielä vanhoja kirjastoja jotka käyttävät reflektiota JDK-luokkien käpistelyyn -->
+							<Add-Opens>java.base/java.lang java.base/java.util java.base/java.math</Add-Opens>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
